# arm64golf

./: .gitignore  AIR5_OPERATOR_NOTE.md  BUILD_PROMPT.md  BUILD_PROMPT_V0_3.md  LICENSE  OPERATOR_NOTES.md  README.md  REPORT.md  SPEC.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: open-submission.md
harness/: __init__.py  attest.py  inference.py  loop.py  module.py  prompts.py  sanitize.py  store.py  verdict.py
problems/sort3-arm64/: module.py  module.toml  reference.s  reference_source.c  tests.json
prompts/: CONTRIBUTING.md
receipts/: 055e012c82ee.json  17e628abfc2b.json  3f846f0d8578.json  47f0dd8d0a24.json  4a8e7be0e09b.json  57b2aa236342.json  726c3e4c49b5.json  9fa2d622fdae.json  PUBKEY  b4d6f989140e.json  d4b664abf6f8.json  f41b055a1965.json
sandbox/: profile.sb  runner.py
sandbox/tests/: test_sandbox.py
submissions/: CONTRIBUTING.md  example.attestation.json  example.s
tests/: test_harness.py
web/: app.js  index.html  styles.css  vercel.json
web/public/: leaderboard.json
