[project]
name = "arm64golf"
version = "0.1.0"
description = "Open-weight coding models on Apple Silicon search the ARM64 sort/hash frontier."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "cryptography>=42",
  "httpx>=0.27",
  "keystone-engine>=0.9.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["sandbox/tests", "tests"]
pythonpath = ["."]
